# role-jumpcloud

./: .gitignore  .travis.yml  .yamllint  README.md  pyproject.toml
.cookiecutter/: cookiecutter.json
.github/markdown/: ISSUE_TEMPLATE.md
.github/scripts/: ansible_cache.sh  build.sh  changelog.sh  pushed_commit_range.sh  setup.sh  version.sh
.github/workflows/: push.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/mock_install_no_update/: converge.yml  molecule.yml  verify.yml
molecule/mock_install_no_update/vars/: main.yml
molecule/mock_install_with_update/: converge.yml  molecule.yml  verify.yml
tasks/: main.yml
tests/: test.yml
