
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    description = "Installs the JumpCloud agent on OSX machines."
    name = "role-jumpcloud"
    version = "0.1.3"

    [tool.poetry.dependencies]
      python = ">=3.9.0,<4.0"

    [tool.poetry.dev-dependencies]
      ansible = "^7.0.0"
      commitizen = "^2.42.0"
      molecule = "^4.0.0"
      yamllint = "^1.29.0"

      [tool.poetry.dev-dependencies.ansible-lint]
        markers = "platform_system != 'Windows'"
        version = "^6.12.2"
